--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 
     <h1 class="header">Saya Abdul belajar HTML dan akan upload ke GitHub</h1>
     <h2 class="sub-header text-center text-white bg-primary">OOOOOOOOOOOOOOOOO</h2>
+
+    <!-- push terbaru -->
+    <p>ada update di web ini</p>
 </body>
 </html>
