--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         .header{
             color: darkorange;
         }
+        span{
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -19,6 +22,6 @@
     <h2 class="sub-header text-center text-white bg-primary">OOOOOOOOOOOOOOOOO</h2>
 
     <!-- push terbaru -->
-    <p>ada update di web ini</p>
+    <p>ada update di web ini, <span><a href="about.html">maau liat?</a></span></p>
 </body>
 </html>
