--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <h2 class="sub-header text-center text-white bg-primary">OOOOOOOOOOOOOOOOO</h2>
 
     <!-- push terbaru -->
-    <p>ada update di web ini, <span><a href="about.html">maau liat?</a></span></p>
+    <p>ada update di web ini, <a href="about.html">mau liat?</a></p>
 </body>
 </html>
