--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdul Belajar Git</title>
     <style>
-        .sub-header{
-            color: #0088cc;
-        }
-        .header{
+        span{
             color: darkorange;
         }
-        span{
-            color: red;
+        h1{
+            font-family: sans-serif;
+            font-size: 40px;
+        }
+        .title{
+            margin-top: 200px;
+            margin-left: 50px;
         }
     </style>
 </head>
 <body>
-
-    <h1 class="header">Saya Abdul belajar HTML dan akan upload ke GitHub</h1>
-    <h2 class="sub-header text-center text-white bg-primary">OOOOOOOOOOOOOOOOO</h2>
+    <div class="title">
+        <h1 class="header">Hi i'm <span>Abdullah</span></h1>
+        <p>I'm the official IDN Boarding School RPL student</p>
+    </div>
 
     <!-- push terbaru -->
-    <p>ada update di web ini, <a href="about.html">mau liat?</a></p>
 </body>
 </html>
