--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdul Belajar Git</title>
-    <style>
-        span{
-            color: darkorange;
-        }
-        h1{
-            font-family: sans-serif;
-            font-size: 40px;
-        }
-        .title{
-            margin-top: 200px;
-            margin-left: 50px;
-        }
-    </style>
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title">
-        <h1 class="header">Hi i'm <span>Abdullah</span></h1>
-        <p>I'm the official IDN Boarding School RPL student</p>
-    </div>
+    <div class="hero">
+        <nav>
+            <h2><b>ABDULLAH</b></h2>
+            <br>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">HIRE ME</a></li>
+            </ul>
+        </nav>
+        <div class="detel">
+            <h1>HI I'm <span>Abdullah</span></h1>
+            <p>This is my official portfolio website to showes all
+                <br> Details and work experience on backend programing
+            </p>
+            <!-- <a href="" download="Abdullah's CV"  class="download">DOWNLOAD CV</a> -->
+        </div>
+        <a class="btn" href="#">DOWNLOAD CV</a>
 
-    <!-- push terbaru -->
+    </div>
 </body>
 </html>
