--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <br>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a></li>
                 <li><a href="#">SERVICE</a></li>
                 <li><a href="#">HIRE ME</a></li>
