--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <p>This is my official portfolio website to showes all
                 <br> Details and work experience on backend programing
             </p>
+            <img src="Group 4.png" class="potoimg">
             <!-- <a href="" download="Abdullah's CV"  class="download">DOWNLOAD CV</a> -->
         </div>
         <a class="btn" href="#">DOWNLOAD CV</a>
-
+        
     </div>
 </body>
 </html>
