--- a/about.html
+++ b/about.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <h1>About Me,</h1> <a href="index.html">balik?</a>
+    <div class="about">
+        <nav>
+            <h2><b>ABOUT</b></h2>
+            <br>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">HIRE ME</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
