about baru ama fitur dev

--- a/about.html
+++ b/about.html
@@ -7,18 +7,22 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div class="about">
+    <div class="aboutgrup">
         <nav>
             <h2><b>ABOUT</b></h2>
             <br>
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">HIRE ME</a></li>
+                <li><a class="home" href="index.html">HOME</a></li>
+                <li><a class="about" href="about.html">ABOUT</a></li>
+                <li><a class="portfolio" href="#">PORTFOLIO</a></li>
+                <li><a class="service" href="#">SERVICE</a></li>
+                <li><a class="hireme" href="#">HIRE ME</a></li>
             </ul>
         </nav>
+        <div class="potogrup">
+            <img class="poto" src="Photo 1 (1).png" width="250">
+        </div>     
+    
     </div>
 </body>
 </html>
