--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h2><b>ABDULLAH</b></h2>
             <br>
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">HIRE ME</a></li>
+                <li><a class="home" href="index.html">HOME</a></li>
+                <li><a class="about" href="about.html">ABOUT</a></li>
+                <li><a class="portfolio" href="#">PORTFOLIO</a></li>
+                <li><a class="service" href="#">SERVICE</a></li>
+                <li><a class="hireme" href="#">HIRE ME</a></li>
             </ul>
         </nav>
         <div class="detel">
