add bounce animation

--- a/learning/bounce.html
+++ b/learning/bounce.html
@@ -33,6 +33,16 @@
             width: 100px;
             height: 100px;
             background-color: red;
+            animation: bounce 0.3s infinite alternate;
+        }
+
+        /* KEYFRAMES AREA */
+        @keyframes bounce{
+            from{
+                transform: translateY(0);
+            }to{
+                transform: translateY(-200px);
+            }
         }
     </style>
 </head>
