--- a/learning/form.html
+++ b/learning/form.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style/form.css">
 </head>
 <body>
-    
+    <div class="container">
+        <fieldset>
+            <legend>Login Form</legend>
+        
+            <!-- login form -->
+             <form action="#" method="post">
+                <div class="form-group">
+                    <label>Username</label>
+                    <input required type="text" placeholder="Input Username">
+                </div><div class="form-group">
+                    <label>Email</label>
+                    <input required="@" type="text" placeholder="Input a Email">
+                </div><div class="form-group">
+                    <label>Password</label>
+                    <input required type="text" placeholder="Input Username">
+             </form>
+        </fieldset>
+    </div>
 </body>
 </html>
