--- a/learning/form.html
+++ b/learning/form.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <fieldset>
-            <legend>Login Form</legend>
+            <legend>Sign Up</legend>
         
             <!-- login form -->
              <form action="#" method="post">
