--- a/learning/form.html
+++ b/learning/form.html
@@ -15,18 +15,34 @@
             <legend>Sign Up</legend>
         
             <!-- login form -->
-             <form action="#" method="post">
+             <form id="login-form" onsubmit="return validatePassword()" action="#" method="post">
                 <div class="form-group">
                     <label>Username</label>
                     <input required type="text" placeholder="Input Username">
-                </div><div class="form-group">
+                </div>
+                <div class="form-group">
                     <label>Email</label>
-                    <input required="@" type="text" placeholder="Input a Email">
-                </div><div class="form-group">
+                    <input required="@" type="email" placeholder="Input a Email">
+                </div>
+                <div class="form-group">
                     <label>Password</label>
-                    <input required type="text" placeholder="Input Username">
+                    <input id="password" required type="password" placeholder="Input a password">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn-login">Sign-Up</button>
+                </div>
              </form>
         </fieldset>
     </div>
+    <script>
+        function validatePassword(){
+            const password = document.getElementById('password').value;
+            if(password.length > 8){
+                alert('Password must be at least 8 characters');
+                return false;
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
