--- a/learning/form.html
+++ b/learning/form.html
@@ -15,14 +15,14 @@
             <legend>Sign Up</legend>
         
             <!-- login form -->
-             <form id="login-form" onsubmit="return validatePassword()" action="#" method="post">
+             <form id="login-form" onsubmit="return validatePassword()"  method="post">
                 <div class="form-group">
                     <label>Username</label>
                     <input required type="text" placeholder="Input Username">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input required="@" type="email" placeholder="Input a Email">
+                    <input type="email" placeholder="Input a Email">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
@@ -35,14 +35,14 @@
         </fieldset>
     </div>
     <script>
-        function validatePassword(){
-            const password = document.getElementById('password').value;
-            if(password.length > 8){
-                alert('Password must be at least 8 characters');
-                return false;
-            }
-            return true;
-        }
+        function validatePassword() {
+    const password = document.getElementById('password').value;
+    if (password.length < 8) {
+        alert('Password must be at least 8 characters long.');
+        return false;
+    }e
+    return true;
+}
     </script>
 </body>
 </html>
